appId: mindsgn.studio.pockt
---
- launchApp:
    clearState: true
- assertVisible: "Create New PIN"
- tapOn:
    id: "create-pin-key-1"
- tapOn:
    id: "create-pin-key-2"
- tapOn:
    id: "create-pin-key-3"
- tapOn:
    id: "create-pin-key-4"
- tapOn:
    id: "create-pin-key-5"
- assertVisible: "Confirm New PIN"
- tapOn:
    id: "confirm-pin-key-1"
- tapOn:
    id: "confirm-pin-key-2"
- tapOn:
    id: "confirm-pin-key-3"
- tapOn:
    id: "confirm-pin-key-4"
- tapOn:
    id: "confirm-pin-key-5"
- assertVisible:
    id: "home-screen"
- tapOn:
    id: "destination-input"
- inputText: "0x000000000000000000000000000000000000dEaD"
- tapOn:
    id: "amount-input"
- inputText: "1"
- tapOn:
    id: "provider-id-input"
- inputText: "maestro"
- tapOn:
    id: "send-button"
- tapOn:
    id: "pin-auth-input"
- inputText: "12345"
- tapOn:
    id: "pin-auth-confirm"
- assertVisible:
    id: "send-status"
