appId: mindsgn.studio.pockt
---
- launchApp
- startRecording: unlock 
- extendedWaitUntil:
    visible: "ENTER PIN"
    timeout: 10000
- tapOn: "1" 
- tapOn: "1" 
- tapOn: "1" 
- tapOn: "1" 
- tapOn: "1" 
- waitForAnimationToEnd:
    timeout: 3000
- stopRecording